--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "gh-pages"]
 	path = gh-pages
 	url = git@github.com:dbaupp/testing.git
+[submodule "gh-pages2"]
+	path = gh-pages2
+	url = git://github.com/dbaupp/testing.git
